kube-stateful-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  selector:
    matchLabels:
      app: cart
  replicas: 3
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart-container
        image: stateful-app:1.0-SNAPSHOT
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
#  type: LoadBalancer
  type: NodePort
  selector:
    app: cart
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9080
    nodePort: 31000
