kube-statefulset-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cart-deployment
spec:
  serviceName: "cart"
  selector:
    matchLabels:
      app: cart
  replicas: 3
  template:
    metadata:
      labels:
        app: cart
    spec:
      volumes:
        - name: cart-trans-pv-storage
          persistentVolumeClaim:
            claimName: cart-trans-pv-claim
      containers:
      - name: cart-container
        image: stateful-app:1.0-SNAPSHOT
        ports:
        - containerPort: 9080
        volumeMounts:
        - mountPath: "/output/tranlog"
          name: cart-trans-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
#  type: LoadBalancer
  type: NodePort
  selector:
    app: cart
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9080
    nodePort: 31000
